Added stable generation of secure random bytes for api docs
